force-app/main/default/objects/Approval_Rule__mdt/Approval_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Approval Rule</label>
    <pluralLabel>Approval Rules</pluralLabel>
</CustomObject>