force-app/main/default/objects/Approval_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the approval rule is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>