force-app/main/default/objects/Approval_Rule__mdt/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <description
  >Role responsible for approving records that match this rule.</description>
    <label>Approver Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>