force-app/main/default/objects/Approval_Rule__mdt/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <description
  >Minimum amount required before this approval rule applies.</description>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>