force-app/main/default/objects/Approval_Rule__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object name that the approval rule applies to.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>