force-app/main/default/objects/Approval_Rule__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Business name of the approval rule.</description>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>